@startuml
'https://plantuml.com/class-diagram


class Listing {
-String ISBN
-String title
-String seller
-double listingPrice
-String condition
-File bookPhoto
-LocalDateTime creationTime
-String listingId
-String pathId

}

class AdminUser {
-String username
-String password
-LocalDateTime ltd
-String email
-String phoneNumber
-String city

}

class CommonUser {
-String username
-String password
-String email
-int phoneNumber
-double performanceRating
-int numRatings
-String city

+getPerformanceRating(): int
+getNumRatings(): int

}

class Book {
-String title
-int year
-String author
-String summary
-int ISBN
-int inStock
-String coverUrl
-String language
-ArrayList<String> subjects

+getInStock(): int
+toString(): String
}

interface User {
+getUsername(): String
+getPassword(): String
}

CommonUser ..|> User
AdminUser ..|> User
Book o-- Listing
CommonUser o-- Listing


@enduml